<resources>
    <string name="app_name">Edu10G</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="sign_in">SING IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_a_member_sign_up">Not a member! Sign Up!</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="conf_password">Confirm Password</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="sub_sub_category">Sub-sub Category</string>
    <string name="go">GO</string>
    <string name="search_with_specific_filter">Search with specific filter</string>
    <string name="search_specific_keyword">Search specific keyword</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="type_keyword_to_search">Type keyword to search</string>
    <string name="search_by">Search By :</string>
    <string name="classes">Classes</string>
    <string name="videos">Videos</string>
    <string name="test_series">Test Series</string>
    <string name="material">Material</string>
    <string name="all">All</string>
    <string name="search_result">Search Result</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By : </string>
    <string name="detail">Details</string>
    <string name="free">Free</string>
    <string name="dummy_title">Instructed By: APH Book</string>
    <string name="dummy_desc">Based on the latest syllabus and guidelines on continuous and comprehensive evaluation (CCE) introduce by CBSE</string>
    <string name="search_with_keyword">Search With Keyword</string>
    <string name="search_with_filters">Search With Filters</string>
    <string name="working_please_wait">Working! Please Wait...</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="course_description">Course Description</string>
    <string name="review">Review</string>
    <string name="physical_version_price">Physical Price</string>
    <string name="digital_version_price">Digital Price</string>
    <string name="sold_by">Sold By:</string>
    <string name="name">Name:</string>
    <string name="seller_name">Seller Name</string>
    <string name="item_name">Item Name</string>
    <string name="desc">Description</string>
    <string name="home">HOME</string>
    <string name="cart">Cart</string>
    <string name="remove">Remove</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="proceed_to_shipping_address">Proceed To Shipping Address</string>
    <string name="go_to_wishlist">Go To Wishlist</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="go_to_shopping_cart">Go To Shopping Cart</string>
    <string name="wish_list">WishList</string>
    <string name="full_name">Full Name</string>
    <string name="pin_code">Pin Code</string>
    <string name="flat_house_number_floor_building">Flat/House Number/Floor/Building</string>
    <string name="landmark">Landmark</string>
    <string name="town_city">Town/City</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="delete_address">Delete Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="ship_to_this_address">Ship To This Address</string>
    <string name="ship_addresses">Shipping Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="err_user_name">Enter user name</string>
    <string name="err_enter_name">Enter Your Name!</string>
    <string name="err_pass">Enter Your Password!</string>
    <string name="err_email">Enter Your Email</string>
    <string name="err_first_name">Enter First Name!</string>
    <string name="err_status">Enter Your Status!</string>
    <string name="err_last_name">Enter Last Name!</string>
    <string name="err_phone_number">Enter Your Phone Number!</string>
    <string name="err_dob">Enter Date Of Birth!</string>
    <string name="err_re_enter_pass">Enter Second Password</string>
    <string name="err_password_mismatch">Password Mismatch!</string>
    <string name="success_signup">Successfully SignUp</string>
    <string name="congratulation">Congratulation</string>
    <string name="old_password">Old Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="update">Update</string>
    <string name="send_password_to_mail">Send password to mail</string>
    <string name="enter_your_e_mail_id">Enter Your E-Mail Id</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="password_reset">Password Reset</string>
    <string name="update_address">Update Address</string>
    <string name="err_msg_search">Search Field Cant Left Blank!</string>
    <string name="rs">RS-</string>
    <string name="file_type">File Type-</string>
    <string name="no_data_available">No Data Available!</string>
    <string name="state">State</string>
    <string name="locality">Locality</string>
    <string name="country">Country</string>
    <string name="address">Address-</string>
    <string name="settings">Settings</string>
    <string name="prices">Prices:-</string>
    <string name="shipping_charges">Shipping Charges-</string>

</resources>
