<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp"
    tools:showIn="@layout/activity_shipping_addresses">

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/fullNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/full_name"
        android:textSize="@dimen/eighteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/phoneNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/phone_number"
        android:textSize="@dimen/sixteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/pincodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/pin_code"
        android:textSize="@dimen/sixteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/flatNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/flat_house_number_floor_building"
        android:textSize="@dimen/sixteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/landmarkTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/landmark"
        android:textSize="@dimen/sixteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/cityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/two_dp"
        android:text="@string/town_city"
        android:textSize="@dimen/sixteen_sp"
        pixlui:typeface="Roboto-Regular.ttf" />
</LinearLayout>