<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:showIn="@layout/course_description_fragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/thirteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/physicalVersionPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Regular.ttf" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sold_by"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/thirteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/digitalVersionPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:gravity="center"
            android:text="@string/seller_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Regular.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical" />

</LinearLayout>