<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="@dimen/seventy_dp"
    android:layout_gravity="bottom"
    android:background="@color/button_color"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/updateAddressTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/update_address"
        android:gravity="center"
        android:text="@string/update_address"
        android:textColor="@color/white"
        android:textSize="@dimen/thirteen_sp"
        pixlui:typeface="Roboto-Medium.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/deleteAddressTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_delete_address"
        android:gravity="center"
        android:text="@string/delete_address"
        android:textColor="@color/white"
        android:textSize="@dimen/thirteen_sp"
        android:visibility="gone"
        pixlui:typeface="Roboto-Medium.ttf" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/proceedToPaymentTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_proceed_payment"
        android:gravity="center"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        pixlui:typeface="Roboto-Medium.ttf" />
</LinearLayout>