<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.divyanshujain.edoteng.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fifteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_dp"
                app:cardElevation="@dimen/two_dp">

                <com.neopixl.pixlui.components.edittext.EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_white_full"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/ten_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/eighteen_sp"
                    pixlui:typeface="Roboto-Regular.ttf" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_dp"
                app:cardElevation="@dimen/two_dp">

                <com.neopixl.pixlui.components.edittext.EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_white_full"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/ten_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/eighteen_sp"
                    pixlui:typeface="Roboto-Regular.ttf" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/forgotPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/signInBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/rounded_corner_orange_filled"
            android:onClick="SignIn"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member_sign_up"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/signUpBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/rounded_corner_dark_grey"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>
</LinearLayout>
