<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/activity_search_keyword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:visibility="visible"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar_with_white_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fifteen_dp"
        android:paddingEnd="@dimen/fifteen_dp"
        android:visibility="visible"
        android:paddingStart="@dimen/fifteen_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/searchKeyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/search_keyword"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.example.divyanshujain.edoteng.CustomViews.CustomAutoCompleteView
            android:id="@+id/searchAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white_full"
            android:hint="@string/type_keyword_to_search"
            android:padding="@dimen/twelve_dp"
            android:visibility="visible"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey_with_fifty_five"
            android:textSize="@dimen/sixteen_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <include layout="@layout/brand_view" />

        </LinearLayout>

        <include layout="@layout/search_keyword_strip_view" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/searchBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/rounded_corner_orange_filled"
            android:text="@string/search"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>

    <include layout="@layout/search_result_view" />

</LinearLayout>
